# suc-translate-pdf-c-free

./: CMakeLists.txt  README.md  main.cpp  output.docx  الحمد لله استخراج نص من.txt
